Code cleanup, some private css cleanup, added links out of out the contest pages to return to the contest submission or gallery.

--- a/programmatic/admin/index.html
+++ b/programmatic/admin/index.html
@@ -1,14 +1,16 @@
 <!--#include virtual="/includes/header_pretitle.inc" -->
 <title>www.gimp.org - Site Administration</title>
+<link href="/style/extended.css" media="screen" rel="stylesheet" title="www.gimp.org - Administration" type="text/css" />
 <!--#include virtual="/includes/header_posttitle.inc" -->
-<!--#include virtual="/includes/menu.inc" -->
+<!--#include virtual="/includes/admin-menu.inc" -->
 <div class="heading">gimp.org Site Administration</div>
 <p>
   Welcome to the www.gimp.org web administration.  With this, you will
   be able to do a variety of things.
 </p>
 <p>
-  Currently, you can create, approve, and archive news items, and edit and delete entries from the <a href="/contest">image contest</a>.
+  Currently, you can create, approve, and archive news items, and edit
+  and delete entries from the <a href="/contest">image contest</a>.
 </p>
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
