Modified ChangeLog. Changing the include files and doing some changes in
Modified ChangeLog.
Changing the include files and doing some changes in the html files to try and make most of them valid still some that needs more work. Also fixed so that the Anti-Aliased Threshold tutorial is complete with original link and e-mail to author.
Helvetix helped me to add a validation link so that you only need to use this when validating. So the site using this include file can validate it directly from the link.

--- a/tutorials/Anti-Aliased_Threshold/index.html
+++ b/tutorials/Anti-Aliased_Threshold/index.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Anti-Aliased Threshold Tutorial</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<div id="main">
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
 <div class="heading">Anti-Aliased Threshold Tutorial</div>
 
 <div class="subtitle">Intention</div>
@@ -45,20 +45,15 @@
   in the layers dialog, you get nice results displayed above.
 </p>
 <p>
- The original tutorial can be found at
-<!--#include virtual="/includes/url_tutorials-AntiAliased_Threshold.inc" -->.
+ The original tutorial can be found <a href="http://drc.gimp.org/">here</a>.
 </p>
-</div>
-<!--#include virtual="/includes/tutnavbar.inc" -->
+<!--#include virtual="/includes/wgo-tutorial-fini.xhtml" -->
     <div>
       <span id="footerleft">
-        Tutorial &copy; 2001-2002 
-<!--#include virtual="/includes/url_mail-patsiv.inc" -->
+      	Tutorial &copy; 2002 <a href="mailto:drc@gimp.org">Ville Pätsi (drc)</a>
       </span>
       <span id="footerright">
-<!--#include virtual="/includes/url_mail-webmaster.inc" -->
+        <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
       </span>
     </div>
-
-  </body>
-</html>
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
