--- a/tutorials/Basic_Perl/index.html
+++ b/tutorials/Basic_Perl/index.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Basic Perl</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<div id="main">
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
 <div class="heading">Basic Perl</div>
 
 <div class="subtitle">Intention</div>
@@ -741,9 +741,7 @@ exit main();
 <p>
   The original tutorial can be found <a href="http://imagic.weizmann.ac.il/~dov/gimp/perl-tut.html">here</a>.
 </p>
-
-</div>
-<!--#include virtual="/includes/tutnavbar.inc" -->
+<!--#include virtual="/includes/wgo-tutorial-fini.xhtml" -->
     <div>
       <span id="footerleft">
         Tutorial &copy; 2002 <a href="mailto:dov@imagic.weizmann.ac.il">Dov Grobgeld</a>
@@ -752,6 +750,4 @@ exit main();
         <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
       </span>
     </div>
-
-  </body>
-</html>
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
