--- a/tutorials/Basic_Scheme/index.html
+++ b/tutorials/Basic_Scheme/index.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Basic Scheme</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<div id="main">
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
 <div class="heading">Basic Scheme</div>
 
 <div class="subtitle">Intention</div>
@@ -564,9 +564,7 @@ The blur is a gaussian blur with the specified feather radius.
 <p>
   The original tutorial can be found <a href="http://imagic.weizmann.ac.il/~dov/gimp/scheme-tut.html">here</a>.
 </p>
-
-</div>
-<!--#include virtual="/includes/tutnavbar.inc" -->
+<!--#include virtual="/includes/wgo-tutorial-fini.xhtml" -->
     <div>
       <span id="footerleft">
         Tutorial &copy; 2002 <a href="mailto:dov@imagic.weizmann.ac.il">Dov Grobgeld</a>
@@ -575,6 +573,4 @@ The blur is a gaussian blur with the specified feather radius.
         <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
       </span>
     </div>
-
-  </body>
-</html>
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
