--- a/tutorials/Basic_Scheme2/index.html
+++ b/tutorials/Basic_Scheme2/index.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Basic Scheme2</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<div id="main">
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
 <div class="heading">Basic Scheme2</div>
 <p>
   This article was originally published in <a href="http://www.linux-mag.com/2002-01/power_01.html">Linux Magazine, January 2002</a>.
@@ -138,7 +138,7 @@
   If you can understand exactly what each of these objects represents, then you are well on your way to being able to script the GIMP.
 </p>
 <p>
-  Let's get started by instantiating some of these objects. Be sure to get a Script-Fu console from (<span class="filter">Xtns-&gt;Script-Fu-&gt;Console...) 
+  Let's get started by instantiating some of these objects. Be sure to get a Script-Fu console from (<span class="filter">Xtns-&gt;Script-Fu-&gt;Console...</span>) 
   so that there is a place for you to type in Scheme code. Now, let's start by following along with <i>Listing One</i>.
 </p>
 <pre class="code">
@@ -228,9 +228,7 @@
 <p>
   This article was originally published in <a href="http://www.linux-mag.com/2002-01/power_01.html">Linux Magazine, January 2002</a>.
 </p>
-
-</div>
-<!--#include virtual="/includes/tutnavbar.inc" -->
+<!--#include virtual="/includes/wgo-tutorial-fini.xhtml" -->
     <div>
       <span id="footerleft">
         Tutorial &copy; 2002 <a href="mailto:beppu@cpan.org">John Beppu</a>
@@ -239,6 +237,4 @@
         <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
       </span>
     </div>
-
-  </body>
-</html>
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
