--- a/tutorials/Changing_Background_Color_2/index.html
+++ b/tutorials/Changing_Background_Color_2/index.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Changing Background Color 2</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<div id="main">
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
 <div class="heading">Changing Background Color 2</div>
 
 <div class="subtitle">Intention</div>
@@ -86,9 +86,7 @@
 <p>
   The original tutorial can be found <a href="http://bitbit.org/cms.php/gimp/tutorials/remove_one_color.html">here</a>.
 </p>
-
-</div>
-<!--#include virtual="/includes/tutnavbar.inc" -->
+<!--#include virtual="/includes/wgo-tutorial-fini.xhtml" -->
     <div>
       <span id="footerleft">
         Tutorial &copy; 2002 <a href="mailto:bit-at-mospan-bitbit-dot-org">Francisco Bustamante Hempe (bit)</a>
@@ -97,6 +95,4 @@
         <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
       </span>
     </div>
-
-  </body>
-</html>
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
