--- a/tutorials/Coloring_A_BW_Sketch/index.html
+++ b/tutorials/Coloring_A_BW_Sketch/index.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Coloring A BW Sketch</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<div id="main">
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
 <div class="heading">Coloring A BW Sketch</div>
 
 <div class="subtitle">Intention</div>
@@ -71,9 +71,7 @@
 <p>
   The original tutorial can be found <a href="http://the.sunnyspot.org/slm/tut_skcol.html">here</a>.
 </p>
-
-</div>
-<!--#include virtual="/includes/tutnavbar.inc" -->
+<!--#include virtual="/includes/wgo-tutorial-fini.xhtml" -->
     <div>
       <span id="footerleft">
         Tutorial &copy; 2002 <a href="mailto:lm@sunnyspot.org">Marco (LM) Lamberto</a>
@@ -82,6 +80,4 @@
         <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
       </span>
     </div>
-
-  </body>
-</html>
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
