--- a/tutorials/Image_Map/index.html
+++ b/tutorials/Image_Map/index.html
@@ -1,4 +1,4 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Image Map Tutorial</title>
 		<script language="JavaScript">
 
@@ -26,8 +26,8 @@ function popup(url, textbox)
 // End -->
 		</script>
 
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<div id="main">
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
 <div class="heading">Image Map Tutorial</div>
 
 <div class="subtitle">Intention</div>
@@ -126,9 +126,7 @@ function popup(url, textbox)
 <p>
   The original tutorial can be found <a href="http://carol.gimp.org/mygimp/tutorials/">here</a>.
 </p>
-
-</div>
-<!--#include virtual="/includes/tutnavbar.inc" -->
+<!--#include virtual="/includes/wgo-tutorial-fini.xhtml" -->
     <div>
       <span id="footerleft">
         Tutorial &copy; 2002 <a href="mailto:carol@gimp.org">Carol Spears (carol)</a>
@@ -137,6 +135,4 @@ function popup(url, textbox)
         <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
       </span>
     </div>
-
-  </body>
-</html>
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
