--- a/tutorials/Lite_Quickies/jpegrace.html
+++ b/tutorials/Lite_Quickies/jpegrace.html
@@ -1,27 +1,26 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - jpeg race</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<div id="main">
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
 <div class="heading">jpeg race</div>
 
 <table>
       <tr><td>
-        <img src="cmprssed.jpg" width="350" height="175" alt="cmprssed.jpg"><br>
+        <img src="cmprssed.jpg" width="350" height="175" alt="cmprssed.jpg"/><br/>
         <p>Quality .06</p>
       </td><td>
-        <img src="compressed.jpg" width="350" height="175" alt="compressed.jpg"><br>
+        <img src="compressed.jpg" width="350" height="175" alt="compressed.jpg"/><br/>
         <p>Quality .38</p>
       </td></tr>
       <tr><td>
-        <img src="default.jpg" width="350" height="175" alt="default.jpg"><br>
+        <img src="default.jpg" width="350" height="175" alt="default.jpg"/><br/>
         <p>Quality .75</p>
       </td><td>
-        <img src="uncompressed.jpg" width="350" height="175" alt="uncompressed.jpg"><br>
+        <img src="uncompressed.jpg" width="350" height="175" alt="uncompressed.jpg"/><br/>
         <p>Quality 1.00</p>
 </td></tr></table>
 
-</div>
-<!--#include virtual="/includes/tutnavbar.inc" -->
+<!--#include virtual="/includes/wgo-tutorial-fini.xhtml" -->
     <div>
       <span id="footerleft">
         Tutorial &copy; 2002 <a href="mailto:carol@gimp.org">Carol Spears (carol)</a>
@@ -30,6 +29,4 @@
         <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
       </span>
     </div>
-
-  </body>
-</html>
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
