--- a/tutorials/3d_Logo/index.html
+++ b/tutorials/3d_Logo/index.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - 3-d Floating Logo</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<div id="main">
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
 <div class="heading">3-d Floating Logo</div>
 
 <div class="subtitle">Intention</div>
@@ -294,9 +294,7 @@
 <p>
  The original tutorial can be found <a href="http://syngin.gimp.no/tutorials/logo.html">here</a>.
 </p>
-
-</div>
-<!--#include virtual="/includes/tutnavbar.inc" -->
+<!--#include virtual="/includes/wgo-tutorial-fini.xhtml" -->
     <div>
       <span id="footerleft">
         Tutorial &copy; 2002 <a href="mailto:synging-at-gimp-dot-org">Mel Boyce (syngin)</a>
@@ -305,6 +303,4 @@
         <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
       </span>
     </div>
-
-  </body>
-</html>
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
