--- a/tutorials/Custom_Brushes/index.html
+++ b/tutorials/Custom_Brushes/index.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Custom Brushes Tutorial</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<div id="main">
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
 <div class="heading">Custom Brushes Tutorial</div>
 
 <div class="subtitle">Intention</div>
@@ -71,9 +71,7 @@
 <p class="images">
   <img src="thumb6.jpg" alt=""/>
 </p>
-
-</div>
-<!--#include virtual="/includes/tutnavbar.inc" -->
+<!--#include virtual="/includes/wgo-tutorial-fini.xhtml" -->
     <div>
       <span id="footerleft">
         Tutorial &copy; 2002 <a href="mailto:gautam@cubicdesign.com">Gautam N. Lad</a>
@@ -82,6 +80,4 @@
         <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
       </span>
     </div>
-
-  </body>
-</html>
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
