--- a/tutorials/Draw_A_Paint_Brush/index.html
+++ b/tutorials/Draw_A_Paint_Brush/index.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Draw A Paint Brush</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<div id="main">
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
 <div class="heading">Draw A Paint Brush</div>
 
 <div class="subtitle">Intention</div>
@@ -235,9 +235,7 @@
 <p>
   The original tutorial can be found <a href="http://tigert.gimp.org/gimp/tutorials/drawing_a_paintbrush/">here</a>.
 </p>
-
-</div>
-<!--#include virtual="/includes/tutnavbar.inc" -->
+<!--#include virtual="/includes/wgo-tutorial-fini.xhtml" -->
     <div>
       <span id="footerleft">
         Tutorial &copy; 2002 <a href="mailto:tigert@gimp.org">Tuomas Kuosmanen (tigert)</a>
@@ -246,6 +244,4 @@
         <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
       </span>
     </div>
-
-  </body>
-</html>
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
