--- a/tutorials/Perl-Debugged/index.html
+++ b/tutorials/Perl-Debugged/index.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Perl Debugged</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<div id="main">
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
 <div class="heading">Perl Debugged</div>
 
 <div class="subtitle">Intention</div>
@@ -239,9 +239,7 @@ Debugged program terminated.  Use q to quit or R to restart,
 <p>
   The original tutorial can be found <a href="http://www.gimp.org/~sjburges/perl_debug/intro.html">here</a>.
 </p>
-
-</div>
-<!--#include virtual="/includes/tutnavbar.inc" -->
+<!--#include virtual="/includes/wgo-tutorial-fini.xhtml" -->
     <div>
       <span id="footerleft">
         Tutorial &copy; 2002 <a href="mailto:sjburges@gimp.org">Seth Burgess (sjburges)</a>
@@ -250,6 +248,4 @@ Debugged program terminated.  Use q to quit or R to restart,
         <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
       </span>
     </div>
-
-  </body>
-</html>
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
