Modified ChangeLog. Changed the address to the validation site. Tutorials
Modified ChangeLog.
Changed the address to the validation site.
Tutorials now using the new include files.
Fixed a validation problem on the index file for the tutorials.

--- a/tutorials/Photo_To_Sketch/index.html
+++ b/tutorials/Photo_To_Sketch/index.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Photo to sketch</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<div id="main">
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
 <div class="heading">Photo to sketch</div>
 
 <div class="subtitle">Intention</div>
@@ -118,9 +118,7 @@
   by selecting a representative shadow/highlight colour, and adding the extra bits with the airbrush tool (looks like an airbrush). 
   After all our work, we end up with this very nice looking painting effect.
 </p>
-
-</div>
-<!--#include virtual="/includes/tutnavbar.inc" -->
+<!--#include virtual="/includes/wgo-tutorial-fini.xhtml" -->
     <div>
       <span id="footerleft">
         Tutorial &copy; 2002 <a href="mailto:bolsh@gimp.org">Dave Neary (bolsh)</a>
@@ -129,6 +127,4 @@
         <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
       </span>
     </div>
-
-  </body>
-</html>
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
