--- a/tutorials/Red_Eye_Removal/index.html
+++ b/tutorials/Red_Eye_Removal/index.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Red Eye Removal</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<div id="main">
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
 <div class="heading">Red Eye Removal</div>
 
 <div class="subtitle">Intention</div>
@@ -81,9 +81,7 @@
 <p>
   The original tutorial can be found <a href="http://carol.gimp.org/other/sloth/diary/redeye.html">here</a>
 </p>
-
-</div>
-<!--#include virtual="/includes/tutnavbar.inc" -->
+<!--#include virtual="/includes/wgo-tutorial-fini.xhtml" -->
     <div>
       <span id="footerleft">
         Tutorial &copy; 2002 <a href="mailto:carol@gimp.org">Carol Spears (carol)</a>
@@ -92,6 +90,4 @@
         <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
       </span>
     </div>
-
-  </body>
-</html>
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
