--- a/tutorials/Using_GAP/index.html
+++ b/tutorials/Using_GAP/index.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Using GAP</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<div id="main">
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
 <div class="heading">Using GAP</div>
 
 <div class="subtitle">Intention</div>
@@ -83,9 +83,7 @@
 <p>
   The original tutorial can be found <a href="http://jimmac.musichall.cz/popup.php3?img=gap&amp;mapa=">here</a>.
 </p>
-
-</div>
-<!--#include virtual="/includes/tutnavbar.inc" -->
+<!--#include virtual="/includes/wgo-tutorial-fini.xhtml" -->
     <div>
       <span id="footerleft">
         Tutorial &copy; 2002 <a href="mailto:jimmac@ximian.com">Jakub Steiner (jimmac)</a>
@@ -94,6 +92,4 @@
         <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
       </span>
     </div>
-
-  </body>
-</html>
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
