--- a/tutorials/Quickmask/index.html
+++ b/tutorials/Quickmask/index.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Quickmask Tutorial</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<div id="main">
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
 <div class="heading">Quickmask Tutorial</div>
 
 <div class="subtitle">Intention</div>
@@ -103,9 +103,7 @@
 <p>
   The original tutorial can be found <a href="http://www.xach.com/gimp/tutorials/quickmask/">here</a>.
 </p>
-
-</div>
-<!--#include virtual="/includes/tutnavbar.inc" -->
+<!--#include virtual="/includes/wgo-tutorial-fini.xhtml" -->
     <div>
       <span id="footerleft">
         Tutorial &copy; 2002 <a href="mailto:xach@gimp.org">Zach Beane</a>
@@ -114,6 +112,4 @@
         <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
       </span>
     </div>
-
-  </body>
-</html>
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
