--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Tutorials</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<!--#include virtual="/includes/menu.inc" -->
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
 <div class="heading">Tutorials</div>
 
@@ -99,6 +99,7 @@
 </p>
 <p>
  <a href="Using_GAP/">Using GAP</a> Learn the basics about using GAP, GIMP Animation Package.
+</p>
 <p>
  <a href="Advanced_Animations/">Advanced Animations</a> Learn how to make an animation with GAP.
 </p>
@@ -166,5 +167,5 @@
 </p>
 
 
-<!--#include virtual="/includes/linkbar.inc" -->
-<!--#include virtual="/includes/footer.inc" -->
+<!--#include virtual="/includes/wgo-page-fini.xhtml" -->
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
