Added ssi-pp.py, a SSI-style preprocessor for files. Corrected the title on the todo.xhtml

--- a/todo.xhtml
+++ b/todo.xhtml
@@ -1,5 +1,5 @@
 <!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
-<title>GIMP - Development GIMP Splash Contest</title>
+<title>GIMP - Development TODO List</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <style type="text/css">
 table.todo p {
