Modified ChangeLog. Using new include files. Add a <br/> to the mediakit
Modified ChangeLog.
Using new include files.
Add a <br/> to the mediakit so that there is space between that link and the next subtitle.
New includes and fixed a bug where <p> needs to be ended before starting a list.

--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - About GIMP</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<!--#include virtual="/includes/menu.inc" -->
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
 <div class="heading">About GIMP</div>
 <div class="subtitle"><a href="introduction.html">Introduction to The GIMP</a></div>
@@ -43,7 +43,7 @@
     <li><a name="src-pmaintainers" href="PLUGIN_MAINTAINERS">Plug-in Maintainers</a></li>
   </ul>
 <div class="subtitle"><a href="screenshots.html">Screen Shots</a></div>
-<div class="subtitle"><a href="mediakit.html">Media Kit</a></div>
+<div class="subtitle"><a href="mediakit.html">Media Kit</a></div><br/>
 <div class="subtitle">The GIMP in the Real World</div>
 <p>The GIMP In Education</p>
   <ul>
@@ -87,5 +87,5 @@
     <li><a href="FIXME">some news or report item</a></li>
     <li><a href="FIXME">some news or report item</a></li>
   </ul>
-<!--#include virtual="/includes/linkbar.inc" -->
-<!--#include virtual="/includes/footer.inc" -->
+<!--#include virtual="/includes/wgo-page-fini.xhtml" -->
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
