--- a/template.html
+++ b/template.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Title goes here</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<!--#include virtual="/includes/menu.inc" -->
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
 <div class="heading">Title goes here</div>
 <div class="subtitle">Sample subtitle</div>
@@ -14,25 +14,25 @@
 <p>
 This is an example of an unordered list. Use this for random informational
 things that do not really follow order:
+</p>
 <ul>
 <li>Unordered list item one</li>
 <li>Unordered list item two</li>
 </ul>
-</p>
 
 <p>
 This is an example of an ordered list. If you need to show steps, use this
 instead of paragraphs:
+</p>
 <ol>
 <li>Ordered list item one</li>
 <li>Ordered list item two</li>
 </ol>
-</p>
 
 <div class="subtitle">Inserting images</div>
 <p class="images">
   <img src="images/thegimp.png" alt="The GIMP"/>
 </p>
 
-<!--#include virtual="/includes/linkbar.inc" -->
-<!--#include virtual="/includes/footer.inc" -->
+<!--#include virtual="/includes/wgo-page-fini.xhtml" -->
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
