--- a/about/mediakit.html
+++ b/about/mediakit.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Mediakit</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<!--#include virtual="/includes/menu.inc" -->
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
 <div class="heading">The GIMP Media Kit</div>
 <div class="subtitle">Subtitle goes here</div>
@@ -13,5 +13,5 @@
 <li><a href="Wilber_Construction_Kit_XP.xcf.gz">the latest Construction Kit</a></li>
 </ul>
 
-<!--#include virtual="/includes/linkbar.inc" -->
-<!--#include virtual="/includes/footer.inc" -->
+<!--#include virtual="/includes/wgo-page-fini.xhtml" -->
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
