--- a/about/splash-cvs.html
+++ b/about/splash-cvs.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Splash History</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<!--#include virtual="/includes/menu.inc" -->
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
 <div class="heading">Development Version Splash History</div>
 <div class="subtitle">The Whole Repository</div>
@@ -171,5 +171,5 @@
 
 
 </table>
-<!--#include virtual="/includes/linkbar.inc" -->
-<!--#include virtual="/includes/footer.inc" -->
+<!--#include virtual="/includes/wgo-page-fini.xhtml" -->
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
