--- a/about/splash-stable.html
+++ b/about/splash-stable.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Splash History</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<!--#include virtual="/includes/menu.inc" -->
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
 <div class="heading">Stable Version Splash History</div>
 <table>
@@ -17,5 +17,5 @@
   artist:  Adrian</p>
 </td></tr>
 </table>
-<!--#include virtual="/includes/linkbar.inc" -->
-<!--#include virtual="/includes/footer.inc" -->
+<!--#include virtual="/includes/wgo-page-fini.xhtml" -->
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
