--- a/mail_lists.html
+++ b/mail_lists.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Mailing Lists</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<!--#include virtual="/includes/menu.inc" -->
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-page-init.xhtml" -->
 <!--#include virtual="/includes/urls_maillist.inc" -->
 <div class="subtitle">List Etiquette</div>
   <p>
@@ -158,5 +158,5 @@
   Conclusion: the faster, easier and cheaper people can see what is
   going in the mails, the better for all. And the topic is Gimp.
 </p>
-<!--#include virtual="/includes/linkbar.inc" -->
-<!--#include virtual="/includes/footer.inc" -->
+<!--#include virtual="/includes/wgo-page-fini.xhtml" -->
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
